# pretix-plugin-cookiecutter

./: .update-locales  README.rst  cookiecutter.json
.github/workflows/: run.yml
{{cookiecutter.repo_name}}/: .gitlab-ci.yml  .install-hooks.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.repo_name}}/.github/workflows/: style.yml  tests.yml
{{cookiecutter.repo_name}}/tests/: conftest.py  test_main.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/: __init__.py  apps.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/locale/de/LC_MESSAGES/: django.po
